reworked the information a stock holds to reduce redundancy and enable stock data modification